--- a/app/src/main/res/layout/fragment_my_home.xml
+++ b/app/src/main/res/layout/fragment_my_home.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="프로필"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toTopOf="@+id/my_home_profile_iv"
             app:layout_constraintStart_toStartOf="@+id/my_home_profile_cl" />
@@ -41,8 +41,8 @@
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/my_home_profile_iv"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:src="@drawable/ic_profile_person"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NAME"
-            android:textSize="35sp"
+            android:textSize="30dp"
             android:layout_marginLeft="5dp"
             app:layout_constraintBottom_toTopOf="@id/my_home_profile_token_tv"
             app:layout_constraintStart_toEndOf="@id/my_home_profile_iv"
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="모은 토큰 개수 :"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:layout_marginLeft="5dp"
             app:layout_constraintBottom_toBottomOf="@id/my_home_profile_iv"
             app:layout_constraintStart_toEndOf="@id/my_home_profile_iv"
@@ -112,7 +112,7 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/my_home_bar_chart"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/my_home_make_todo_tv"
         app:layout_constraintStart_toStartOf="parent"
