--- a/app/src/main/res/layout/fragment_i_calendar.xml
+++ b/app/src/main/res/layout/fragment_i_calendar.xml
@@ -14,26 +14,39 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
-
-    <RadioGroup
-        android:id="@+id/ctype"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <RadioButton
-            android:id="@+id/radIndividual"
+        android:orientation="horizontal">
+        <RadioGroup
+            android:id="@+id/ctype"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <RadioButton
+                android:id="@+id/radIndividual"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Indiv">
+            </RadioButton>
+            <RadioButton
+                android:id="@+id/radGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Group">
+            </RadioButton>
+        </RadioGroup>
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Indiv">
-        </RadioButton>
-        <RadioButton
-            android:id="@+id/radGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Group">
-        </RadioButton>
-    </RadioGroup>
+            android:text="개인 스케줄 캘린더"
+            android:layout_gravity="center"
+            android:gravity="center"/>
+    </LinearLayout>
+
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         xmlns:app="http://schemas.android.com/apk/res-auto"
